<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stratus</string>
    <string name="app_description">Stratus Mobile App</string>
    <string name="support_link">For support click &lt;a href="mailto:petr.panuska@hpe.com?subject=Support&#160;needed&#160;for&#160;Stratus&#160;Mobile&#160;App&#160;(%1$s)&amp;body=Android&#160;API&#160;v.&#160;%2$s;&#160;on&#160;device&#160;%3$s&#160;(%4$dx%5$d&#160;pixels);&#160;on&#160;day&#160;%6$s">here&lt;/a></string>
    <string name="support_mail_subj">Support needed for Stratus Mobile App (%1$s)</string>
    <string name="support_mail_body">An exception thrown:\n%1$s\n\nAndroid API v. %2$s; on device %3$s (%4$dx%5$d pixels); on day %6$s.</string>
    <string name="support_mail_to">petr.panuska@hpe.com</string>
    <string name="mail_client_title">Send error report</string>
    <string name="no_mail_clients">There are no email clients installed.</string>
    <string name="criticalError">A critical error has appeared. The application will get closed.\nPlease, report this error to authors to improve application quality in next versions.</string>
    <string name="noStratus">Currently STRATUS is unavailable due to maintenance, please check back shortly for demo services to be available again.</string>
    <string name="systemMaintenance">System Maintenance</string>
    <string name="errorTitle">Fatal Error</string>
    <string name="okButton">OK</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_subscriptions">My Demos</string>
    <string name="title_activity_offerings">Catalog</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_offering">Demo Details</string>
    <string name="menu_refresh">Refresh</string>
    <string name="dsg">© Demo Solution Group</string>
    <string name="home_link"><a href="https://www.hpswdemoportal.com">HP SW Demo Portal</a></string>
    <string name="done">Done</string>
    <string name="register_link"><a href="https://password.hpswdemoportal.com">To register click here</a></string>
    <string name="subscribe">Subscribe</string>
    <string name="defaultOfferingName">ALM12 2.4 Demo Platform v1</string>
    <string name="defaultEmailAddress">panuska@hpe.com</string>
    <string name="offeringDefaultDescription">NOTE: Only Client, SERVER &amp; AOB host included; you must manually select others. Demo includes ALM suite v12.01 (ALM, ALI) </string>
    <string name="offeringDefaultCatalog">CSADemo Catalog</string>
    <string name="offeringDefaultUpdateDate">Oct 21, 2010 09:47 PM</string>
    <string name="emailAddressTitle">Email\naddress</string>
    <string name="subscriptionNameTitle">Subscr.\nname</string>
    <string name="oppIdTitle">Opportunity ID</string>
    <string name="howManyDaysTitle">Demo necessary for</string>
    <string name="oppDefaultValue">OPP-XXXXXXXXXX</string>
    <string name="howManyDaysDefaultValue">4</string>
    <string name="daysTitle"> days</string>
    <string name="subscriptionRequestSuccess">Subscription has been requested</string>
    <string name="subscriptionRequestFailure">Subscription request has failed!</string>
    <string name="serviceActionRequestSuccess">Operation has been requested</string>
    <string name="serviceActionRequestFailure">Operation request has failed!</string>
    <string name="noOpsDefined">No defined operation to execute!</string>

    <string name="extensionRequestSuccess">Requested %d more days</string>
    <string name="extensionRequestFailure">Request for extension has failed!</string>
    <string name="extensionRequestMissing">This demo cannot be extended!</string>

    <string name="shareRequestSuccess">Demo sharing requested</string>
    <string name="shareRequestFailure">Request for sharing has failed!</string>
    <string name="shareRequestMissing">This demo cannot be shared!</string>
    <string name="defaultShareEmail">e-mail@hpe.com</string>

    <string name="cancelRequestSuccess">Demo cancellation requested</string>
    <string name="cancelRequestFailure">Request for cancellation has failed!</string>

    <string name="deleteRequestSuccess">Demo deleted</string>
    <string name="deleteRequestFailure">Deleting demo has failed!</string>

    <string name="defaultSubscriptionName">ALM12 2.4 Demo Platform v1</string>
    <string name="subscriptionDefaultDescription">NOTE: Only Client, SERVER &amp; AOB host included; you must manually select others. Demo includes ALM suite v12.01 (ALM, ALI) </string>
    <string name="defaultSubscriptionIconDesc">Icon</string>
    <string name="extendButton">Extend</string>
    <string name="shareButton">Share</string>
    <string name="cancelButton">Cancel</string>
    <string name="deleteButton">Delete</string>

    <string name="showAllSubscriptions">Show active and inactive subscriptions</string>
    <string name="showActiveSubscriptions">Show active subscriptions only</string>
    <string name="filterSubscriptions">Filter subscriptions</string>
    <string name="loadImages">Load images</string>
    <string name="noImagesShown">No images shown</string>
    <string name="imagesShown">Images will be shown</string>
    <string name="cacheFiles">Cache files</string>
    <string name="noFilesStored">No files will be stored in device RAM</string>
    <string name="storeFiles">Temporarily store images and other files</string>
    <string name="clearCacheNow">Clear cache now</string>
    <string name="clearCacheSummary">Frees %1$dkB of RAM and %2$dkB of disk cache</string>
    <string name="keepPassword">Remember password</string>
    <string name="askForCredentials">Ask always for credentials</string>
    <string name="doNotAskForCredentials">Do not ask for credentials</string>
    <string name="logoutNow">Logout now</string>
    <string name="removeAuthDetails">Removes all authentication details (will ask for password next time)</string>
    <string name="settings">Settings</string>
    <string name="sureToExit">Are you sure you want to exit the app?</string>
    <string name="exitConfirmation">Exit Confirmation</string>
    <string name="noHintsShown">No hints will be shown</string>
    <string name="hintsShown">Help user to learn UI tricks</string>
    <string name="showHints">Show hints</string>
    <string name="demos">demos</string>
    <string name="demo">demo</string>
    <string name="allCategories">All Categories</string>
    <string name="noInternet">There is no internet connection!</string>
    <string name="backOnline">We are back online!</string>
    <string name="operationExecutionTitle">Operation Execution</string>
    <string name="operationExecutionText">Execute operation %1$s on %2$s VM?"</string>
</resources>
