<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="?android:buttonBarStyle"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="3">

    <Button
        android:id="@+id/shareButton"
        android:layout_width="0px"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/activity_margin"
        android:layout_weight="1"
        android:text="@string/shareButton" />

    <Button
        android:id="@+id/extendButton"
        android:layout_width="0px"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/activity_margin"
        android:layout_weight="1"
        android:text="@string/extendButton" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="0px"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/activity_margin"
        android:layout_weight="1"
        android:text="@string/cancelButton" />

</LinearLayout>